(lang dune 2.5)
(name unix_capnp_messaging)
(source (github cjen1/unix_capnp_messaging))
(authors "Chris Jensen")

(generate_opam_files true)

(package
  (name unix_capnp_messaging)
  (synopsis "A basic messaging system for capnp messages. Made as a proof of concept for a high performance messaging system on unix")
  (depends
    lwt
    logs
    fmt
    capnp
    alcotest
    core
    )
    )

    
