(executable
 (name main)
 (libraries lwt.unix capnp-rpc-lwt capnp-rpc capnp-rpc-net capnp-rpc-unix logs.fmt)
 (preprocess (pps lwt_ppx))
 (flags (:standard -w -53-55)))

(rule
 (targets echo_api.ml echo_api.mli)
 (deps    echo_api.capnp)
 (action (run capnpc -o %{bin:capnpc-ocaml} %{deps})))
