(library
  (name protocol_api)
  (libraries capnp))

(rule
  (targets protocol_api.ml protocol_api.mli)
  (deps protocol_api.capnp)
  (action
    (progn 
      (run capnp compile -I /home/cjj39/go/src/zombiezen.com/go/capnproto2/std -o ocaml %{deps}))
    ))


(env
 (dev
  (flags
   (:standard -w -39-53-55))))
